Changelog for CinemaVision

[- 1.0.0 -]

- add:     Default 3D sequence
- add:     You can now load the default sequences
- fix:     Videos with multiple audio streams could sometimes fail audio format detection
- fix:     Error caused by trailers with missing release date

[- 1.0.0b1 -]

- fix:     When clearing action file in the module, was displaying Default()
- add:     Localize settings strings
- add:     Added ability to test actions from the module and addon settings
- change:  Removed settings button in Actions: 'Check action file(s) for errors'
- add:     Add 'Test' button for 'Pause', 'Resume' and 'Abort' action settings
- change:  Change Action module option 'Check for errors' to 'Test'
- change:  Sequence title now displays in the upper right background
- add:     Addon version now displays in the upper left background
- change:  Trivia Slides directory name changed to Trivia - will auto-rename when loading content
- change:  Added more details to the playlist editor

[- 0.0.50 -]

- change:  .cvseq file format is now JSON instead of XML
- add:     Option for action modules to check action file errors
- add:     Option in settings in 'Action' section to check action files errors

[- 0.0.49 -]

- change:  Switch from demo mode to normal now works more intuitively (i.e. trailers are not lost)
- change:  You can now set the count for all video bumper types except file
- add:     In section 'Content' as a subsetting to 'Trailers: Kodi Database' added 'Ignore YouTube trailers'
- add:     In section 'Content' as a subsetting to 'Trailers: Kodi Database' added 'Mark watched if movie is watched'

[- 0.0.48 -]

- add:     Scan Trailers directory recursively
- change:  Heading 'Trailers Scrapers' in section 'Content' changed to 'Content Scrapers'
- add:     Unavailable trailers will now be removed from the database when updating content
- fix:     When trivia paused during music fade in, music would not play